@@ -1,6 +1,7 @@
 Revision history for Bag-Similarity
 
 {{$NEXT}}
+       - added author tests
 
 0.019  2015-04-27 15:56:32 CEST
        - improved travis, badges
